tokio-postgres crate added

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ axum = "0.4.8"
 tokio = {version = "1.17.0", features = ["full"]}
 serde = {version = "1.0.1", features = ["derive"]}
 uuid = {version = "0.8", features = ["v4"]}
+tokio-postgres = "0.7.5"
